--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <header>
       <div>
-        <img src="assets/6ed9bcf689f77b24bbb27668df8bc9a9ea103e36.png" alt="" />
+        <img src="6ed9bcf689f77b24bbb27668df8bc9a9ea103e36.png" alt="" />
       </div>
 
       <div class="texts">
@@ -46,7 +46,7 @@
 
     <section>
       <div>
-        <img src="assets/0dda2cc4c3d8a93703e9f5a8361ddeed752dae9a.png" alt="" />
+        <img src="0dda2cc4c3d8a93703e9f5a8361ddeed752dae9a.png" alt="" />
       </div>
       <div class="texts">
         <span id="first">About me</span>
@@ -79,19 +79,19 @@
       <div class="content">
         <div class="images">
           <div class="img-1">
-            <img src="assets/7c7437a8bc37757962b68521d8bdb8f347db1362.jpg" alt="" />
+            <img src="7c7437a8bc37757962b68521d8bdb8f347db1362.jpg" alt="" />
           </div>
           <div class="img-2">
-            <img src="assets/57b919408724dc9fe618e25383911138221a5e38.jpg" alt="" />
+            <img src="57b919408724dc9fe618e25383911138221a5e38.jpg" alt="" />
           </div>
           <div class="img-3">
-            <img src="assets/f9d0f91573f8e7de73529ccecb372db4638a8a63 (1).jpg" alt="" />
+            <img src="f9d0f91573f8e7de73529ccecb372db4638a8a63 (1).jpg" alt="" />
           </div>
         </div>
 
         <div class="box">
           <div class="img-4">
-            <img src="assets/7c7437a8bc37757962b68521d8bdb8f347db1362.jpg" alt="" />
+            <img src="7c7437a8bc37757962b68521d8bdb8f347db1362.jpg" alt="" />
           </div>
           <div class="text">
             <span id="first">Content Analyser</span>
@@ -121,7 +121,7 @@
 
       <div class="images">
         <div class="img-1">
-          <img src="assets/Frame 3777.png" alt="" />
+          <img src="Frame 3777.png" alt="" />
         </div>
         <div class="img-2">
           <img src="" alt="" />
@@ -143,13 +143,13 @@
 
       <div class="images">
         <div class="img-1">
-          <img src="assets/39e3c7946fd0b508fb9e3fa98d535ea579ad73a0.jpg" alt="" />
+          <img src="39e3c7946fd0b508fb9e3fa98d535ea579ad73a0.jpg" alt="" />
         </div>
         <div class="img-2">
-          <img src="assets/39e3c7946fd0b508fb9e3fa98d535ea579ad73a0.jpg" alt="" />
+          <img src="39e3c7946fd0b508fb9e3fa98d535ea579ad73a0.jpg" alt="" />
         </div>
         <div class="img-3">
-          <img src="assets/39e3c7946fd0b508fb9e3fa98d535ea579ad73a0.jpg" alt="" />
+          <img src="39e3c7946fd0b508fb9e3fa98d535ea579ad73a0.jpg" alt="" />
         </div>
       </div>
     </section>
@@ -169,10 +169,10 @@
       </div>
 
       <div class="img-1">
-        <img src="assets/Component 76.png" alt="" />
+        <img src="Component 76.png" alt="" />
       </div>
       <div class="img-2">
-        <img src="assets/Component 76.png" alt=""/>
+        <img src="Component 76.png" alt=""/>
       </div>
 
       <div class="texts">
@@ -216,7 +216,7 @@
 
         <address>
           <div class="img">
-          <img src="assets/6b63c2b4432067d9bce0c5033cc3f13f6c608674 (1).png" alt=""/>
+          <img src="6b63c2b4432067d9bce0c5033cc3f13f6c608674 (1).png" alt=""/>
         </div>
           <form>
             <input type="text" placeholder="Name*"/><br/>
